--- a/input.yml
+++ b/input.yml
@@ -4,9 +4,14 @@
 
 # Variables
 varfile: "Varlist.xlsx"
+save: "yes"
+
+# Optional Modules
+variable_counting: "1"
+generate_composites: "yes"
 
 # Technical parameters
-threshold_dataremoval: "5"
-sample_size: "250"             # Not necessarily equal or lower than threshold_dataremoval
-times_sampling: "25"
-combined_sample_size: "10"    # Not being used anymore?
+threshold_dataremoval: "10"
+sample_size_per_ms: "3000"
+resampling: "100"
+removal_c8: "yes"
